<resources>
    <string name="app_name">SupCooking</string>
    <string name="text_button_Register_activity_register">S\'enregistrer</string>
    <string name="text_view_password_activity_register">Password :</string>
    <string name="text_view_email_activity_register">Email :</string>
    <string name="title_activity_register">Nouvel utilisateur</string>
    <string name="title_activity_login">Connexion</string>
    <string name="text_button_login_activity_login">Se connecter</string>
    <string name="text_view_password_activity_login">Password :</string>
    <string name="text_view_username_activity_login">Username :</string>
    <string name="text_view_pseudo_activity_register">Username :</string>
    <string name="image_view_description_row_recipe">RecipeImage</string>
    <string name="text_view_title_list_recipe_online">Recettes disponible :</string>
    <string name="text_view_recipe_detail_type_label">Sujet : </string>
    <string name="text_view_recipe_detail_cooking_time_label">Temps de cuisson : </string>
    <string name="text_view_recipe_detail_preparation_time_label">Temp de préparation :</string>
    <string name="text_view_detail_recipe_ingredients_label">Ingrédients</string>
    <string name="text_view_detail_preparation_steps_label">Etape de préparation :</string>
    <string name="image_view_description_new_recipe">Image temporaire pour ajout recette</string>
    <string name="text_button_new_recipe_take_picture">Prendre une photo</string>
    <string name="text_view_new_recipe_title_name">Titre de la recette :</string>
    <string name="text_view_new_recipe_type_label">Type de la recette :</string>
    <string name="text_view_new_recipe_cooking_time_label">Temps de cuisson :</string>
    <string name="text_view_new_recipe_preparation_time_label">Temps de preparation :</string>
    <string name="text_view_new_recipe_ingredients_label">Ingrédients :</string>
    <string name="text_view_new_recipe_preparation">Etape de préparations :</string>
    <string name="button_new_recipe_add_recipe">Enregister</string>
</resources>
