<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddRecipeActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="200dp"
            android:maxWidth="200dp"
            android:id="@+id/IMGVNewRecipeTemp"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/image_view_description_new_recipe"
            android:adjustViewBounds="true"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/BTNNewRecipeTakePicture"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:onClick="onClickNewRecipeTakePicture"
            android:text="@string/text_button_new_recipe_take_picture"
            android:layout_below="@id/IMGVNewRecipeTemp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TVNewRecipeTitleNameLabel"
            android:text="@string/text_view_new_recipe_title_name"
            android:layout_below="@id/BTNNewRecipeTakePicture"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorTitle"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/ETNewRecipeTitleName"
            android:layout_alignBaseline="@id/TVNewRecipeTitleNameLabel"
            android:layout_toRightOf="@id/TVNewRecipeTitleNameLabel"
            android:layout_toEndOf="@id/TVNewRecipeTitleNameLabel"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TVNewRecipeTypeLabel"
            android:text="@string/text_view_new_recipe_type_label"
            android:layout_below="@id/TVNewRecipeTitleNameLabel"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorTitle"
            android:layout_marginTop="35dp"
            android:layout_marginStart="10dp" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/ETNewRecipeType"
            android:layout_alignBaseline="@id/TVNewRecipeTypeLabel"
            android:layout_toRightOf="@id/TVNewRecipeTypeLabel"
            android:layout_toEndOf="@id/TVNewRecipeTypeLabel"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TVNewRecipeCookingTime"
            android:text="@string/text_view_new_recipe_cooking_time_label"
            android:layout_below="@id/TVNewRecipeTypeLabel"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorTitle"
            android:layout_marginTop="35dp"
            android:layout_marginStart="10dp" />

        <EditText
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:id="@+id/ETNewRecipeCookingTime"
            android:layout_alignBaseline="@id/TVNewRecipeCookingTime"
            android:layout_toRightOf="@id/TVNewRecipeCookingTime"
            android:layout_toEndOf="@id/TVNewRecipeCookingTime"
            android:inputType="number"
            android:maxLength="4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TVNewRecipePreparationTimeLabel"
            android:text="@string/text_view_new_recipe_preparation_time_label"
            android:layout_below="@id/TVNewRecipeCookingTime"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorTitle"
            android:layout_marginTop="35dp"
            android:layout_marginStart="10dp" />

        <EditText
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:id="@+id/ETNewRecipePreparationTime"
            android:layout_alignBaseline="@id/TVNewRecipePreparationTimeLabel"
            android:layout_toRightOf="@id/TVNewRecipePreparationTimeLabel"
            android:layout_toEndOf="@id/TVNewRecipePreparationTimeLabel"
            android:inputType="number"
            android:maxLength="4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TVNewRecipeIngredientsLabel"
            android:text="@string/text_view_new_recipe_ingredients_label"
            android:layout_below="@id/TVNewRecipePreparationTimeLabel"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="35dp"
            android:textColor="@color/colorTitle"
            android:layout_marginStart="10dp"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:id="@+id/ETNewRecipeIngredients"
            android:layout_below="@id/TVNewRecipeIngredientsLabel"
            android:layout_toRightOf="@id/TVNewRecipeIngredientsLabel"
            android:layout_toEndOf="@id/TVNewRecipeIngredientsLabel"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TVNewRecipePreparationStepsLabel"
            android:text="@string/text_view_new_recipe_preparation"
            android:layout_below="@id/ETNewRecipeIngredients"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="35dp"
            android:textColor="@color/colorTitle"
            android:layout_marginStart="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/ETNewRecipePreparationSteps"
            android:layout_below="@id/TVNewRecipePreparationStepsLabel"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"/>

        <Button
            android:id="@+id/BTNNewRecipeAddRecipe"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:text="@string/button_new_recipe_add_recipe"
            android:onClick="onClickNewRecipeAddRecipe"
            android:layout_below="@id/ETNewRecipePreparationSteps"
            android:layout_marginTop="25dp"
            />


    </RelativeLayout>

</ScrollView>