<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.supinfo.supcooking.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="79dp">

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:text="@string/title_activity_register"
            android:textColor="@color/colorTitle"/>

        <TextView
            android:id="@+id/textViewPseudo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/ETPseudo"
            android:layout_alignBottom="@+id/ETPseudo"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/BTNRegister"
            android:layout_toStartOf="@+id/BTNRegister"
            android:text="@string/text_view_pseudo_activity_register"
            android:textColor="@color/colorTextView" />

        <EditText
            android:id="@+id/ETPseudo"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignLeft= "@id/Title"
            android:layout_marginTop="75dp"
            android:inputType="text"
            android:textColor="@color/colorTitle"
            android:layout_alignStart="@id/Title" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/ETEmail"
            android:layout_alignBottom="@+id/ETEmail"
            android:layout_alignEnd="@+id/textViewPassword"
            android:layout_alignRight="@+id/textViewPassword"
            android:text="@string/text_view_email_activity_register"
            android:textColor="@color/colorTextView" />

        <EditText
            android:id="@+id/ETEmail"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignLeft= "@id/Title"
            android:layout_marginTop="150dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorTitle"
            android:layout_alignStart="@id/Title"/>

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/ETPassword"
            android:layout_alignBottom="@+id/ETPassword"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/BTNRegister"
            android:layout_toStartOf="@+id/BTNRegister"
            android:text="@string/text_view_password_activity_register"
            android:textColor="@color/colorTextView" />

        <EditText
            android:id="@+id/ETPassword"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignLeft= "@id/Title"
            android:layout_marginTop="225dp"
            android:inputType="textPassword"
            android:textColor="@color/colorTitle"
            android:layout_alignStart="@id/Title"/>

        <Button
            android:id="@+id/BTNRegister"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:onClick="onClickRegister"
            android:text="@string/text_button_Register_activity_register" />

        <Button
            android:id="@+id/BTNLogin"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:onClick="onClickLogin"
            android:text="@string/text_button_login_activity_login" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>