<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.supinfo.supcooking.MainActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="79dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/ETLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:text="@string/title_activity_login"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorTitle"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_alignBaseline="@+id/ETLoginUsername"
            android:text="@string/text_view_username_activity_login"
            android:layout_marginStart="40dp"
            android:id="@+id/TVLoginUsername"
            android:textColor="@color/colorTextView"
            android:layout_below="@id/ETLoginTitle"/>

        <EditText
            android:id="@+id/ETLoginUsername"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="75dp"
            android:inputType="text"
            android:layout_marginLeft="120dp"
            android:layout_marginStart="120dp"
            android:textColor="@color/colorTitle"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/ETLoginPassword"
            android:layout_alignEnd="@id/TVLoginUsername"
            android:text="@string/text_view_password_activity_login"
            android:id="@+id/TVPassword"
            android:layout_alignRight="@id/TVLoginUsername"
            android:textColor="@color/colorTextView"
            android:layout_below="@id/TVLoginUsername"/>

        <EditText
            android:id="@+id/ETLoginPassword"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="150dp"
            android:inputType="textPassword"
            android:layout_marginLeft="120dp"
            android:layout_marginStart="120dp"
            android:textColor="@color/colorTitle"
           />


        <Button
            android:id="@+id/BTNLoginLogin"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/BTNLoginRegister"
            android:layout_alignStart="@+id/BTNLoginRegister"
            android:layout_below="@+id/ETLoginPassword"
            android:onClick="onClickLogin"
            android:text="@string/text_button_login_activity_login"
            android:layout_marginTop="115dp"
            />

        <Button
            android:id="@+id/BTNLoginRegister"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:text="@string/text_button_Register_activity_register"
            android:onClick="onClickRegister"
            android:layout_below="@id/BTNLoginLogin"/>

        <ProgressBar
            android:id="@+id/PBLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ETLoginPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp" />
    </RelativeLayout>

</ScrollView>
